fix: alignment issue with highlight

--- a/frontend/src/static/css/style.scss
+++ b/frontend/src/static/css/style.scss
@@ -229,6 +229,7 @@ header{
       .overlay{
         height:100%;
         position:absolute;
+        top:0;
 
         &.show{
           background-color:#fffa;
